Updated update.php and add JS to it for textbox error checking

--- a/main.css
+++ b/main.css
@@ -3,34 +3,15 @@ body {
 }
 
 
-/* form.search {
-    width: 80%;
-    height: 150px;
-    border: white solid 1px;
-    border-bottom: #727272 solid 2px;
-} */
+/* Styles for titlebar */
 
-/* div.upload {
-    width: 5%;
-    height: 150px;
-    border: white solid 1px;
-    border-bottom: #727272 solid 2px;
-    display: block;
-    float: left;
-} */
-
-form {
+form.search {
     /* border: white solid 1px; */
     height: 150px;
     margin-top: -10px !important;
     width: 99% !important;
     border-bottom: #727272 solid 2px;
 }
-
-/* div.titlebar-container {
-    border: white solid 1px;
-    border-bottom: #727272 solid 2px;
-} */
 
 .title-text {
     float: left;
@@ -59,4 +40,28 @@ img.upload {
     /* margin-bottom: -17px; */
     margin-top: 45px;
     float: right;
+}
+
+
+/* Styles for upload.php */
+
+form.upload-form {
+    /* border: white solid 1px; */
+    border-left: #727272 solid 2px;
+    border-right: #727272 solid 2px;
+    margin: 0 25% 0 25%;
+}
+
+.upload-form input, .upload-form textarea, .upload-form select {
+    display: block;
+    margin-left: 20px;
+    /* margin-bottom: 30px; */
+    /* border: white solid 1px; */
+}
+
+.upload-form h3 {
+    color: #FF3D53;
+    /* border: white solid 1px; */
+    margin-bottom: 0px;
+    margin-left: 20px;
 }
