--- a/main.css
+++ b/main.css
@@ -65,3 +65,83 @@ form.upload-form {
     margin-bottom: 0px;
     margin-left: 20px;
 }
+
+
+/* Styles for Video element displays */
+
+div.video-list-container {
+    /* border: white solid 1px; */
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+#video-item {
+    /* border: white solid 1px; */
+    width: 100%;
+    height: 178.75px;
+    padding-top: 10px;
+    border-bottom: #727272 solid 2px;
+}
+
+iframe {
+    width: 300px;
+    height: 168.75px;
+    /* margin-top: 5px; */
+    margin-bottom: 10px;
+    float: left;
+}
+
+.video-list-container a {
+    color: #FF3D53;
+    /* border: white solid 1px; */
+    padding-left: 10px;
+    /* margin-top: 1000px !important; */
+    font-family: "Calibri";
+    /* position: relative; */
+}
+
+#players-characters {
+    /* border: white solid 1px; */
+    /* display: inline; */
+}
+
+#players-characters table {
+    color: #FF3D53;
+    font-size: 10pt;
+    font-family: "Calibri";
+    padding-left: 10px;
+    width: 20%;
+    margin-top: 10px;
+    /* border-right: #727272 solid 2px; */
+}
+
+table .data {
+    font-weight: lighter;
+}
+
+table .header {
+    font-weight: bolder !important;
+    padding-bottom: 10px;
+}
+
+#table-border {
+    border-bottom: #727272 solid 1px;
+}
+
+#game-stage {
+    color: #FF3D53;
+    float: right;
+    font-family: "Calibri";
+    /* border: white solid 1px; */
+    /* border-right: #727272 solid 2px; */
+    margin-top: -83px;
+    width: 20%;
+    text-align: left;
+}
+
+#description p {
+    /* border: white solid 1px; */
+    color: #FF3D53;
+    font-family: "Calibri";
+    margin-left: 310px;
+}
